<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="setec.g3.tappdetect.MainActivity" >

    <TextView
        android:id="@+id/main_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_title" />

    <TextView
        android:id="@+id/xacc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title_view"
        android:layout_marginTop="25dp"
        android:text="@string/main_accX" />

    <EditText
        android:id="@+id/xacc_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/xacc_view"
        android:layout_alignBottom="@+id/xacc_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/xacc_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/yacc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xacc_view"
        android:layout_marginTop="20dp"
        android:text="@string/main_accY" />
    
    <EditText
        android:id="@+id/yacc_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yacc_view"
        android:layout_alignBottom="@+id/yacc_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/yacc_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    
    <TextView
        android:id="@+id/zacc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yacc_view"
        android:layout_marginTop="20dp"
        android:text="@string/main_accZ" />
    
    <EditText
        android:id="@+id/zacc_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zacc_view"
        android:layout_alignBottom="@+id/zacc_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/zacc_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    
    <TextView
        android:id="@+id/xdelta_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zacc_view"
        android:layout_marginTop="25dp"
        android:text="@string/main_deltaX" />

    <EditText
        android:id="@+id/xdelta_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/xdelta_view"
        android:layout_alignBottom="@+id/xdelta_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/xdelta_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ydelta_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xdelta_view"
        android:layout_marginTop="20dp"
        android:text="@string/main_deltaY" />
    
    <EditText
        android:id="@+id/ydelta_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ydelta_view"
        android:layout_alignBottom="@+id/ydelta_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/ydelta_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    
    <TextView
        android:id="@+id/zdelta_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ydelta_view"
        android:layout_marginTop="20dp"
        android:text="@string/main_deltaZ" />
    
    <EditText
        android:id="@+id/zdelta_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zdelta_view"
        android:layout_alignBottom="@+id/zdelta_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/zdelta_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    
    <TextView
        android:id="@+id/speed_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zdelta_view"
        android:layout_marginTop="25dp"
        android:text="@string/main_speed" />
    
    <EditText
        android:id="@+id/speed_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/speed_view"
        android:layout_alignBottom="@+id/speed_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/speed_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />

	<TextView
        android:id="@+id/obs_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_view"
        android:layout_marginTop="25dp"
        android:text="@string/main_obs" />

    <EditText
        android:id="@+id/obs_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/obs_view"
        android:layout_alignBottom="@+id/obs_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/obs_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    
    <TextView
        android:id="@+id/obs2_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/obs_view"
        android:layout_marginTop="20dp"
        android:text="@string/main_obs" />

    <EditText
        android:id="@+id/obs2_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/obs2_view"
        android:layout_alignBottom="@+id/obs2_view"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/obs2_view"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <RadioButton
        android:id="@+id/radioAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xacc_view"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:focusable="false" />

    <RadioButton
        android:id="@+id/radioProx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioAcc"
        android:layout_alignBottom="@+id/radioAcc"
        android:layout_toLeftOf="@+id/main_title_view"
        android:clickable="false"
        android:focusable="false" />

</RelativeLayout>